# evodex

./: .gitignore  default_action.py  generated_gripper.urdf  main.py  pyproject.toml  setup.cfg  test.py
configs/: base_robot.yaml  base_simulator.yaml  keyboard_control_simulator.yaml  move_cube_scenario.yaml
configs/robot/3d/: 1_finger_robot.yaml  base_robot.yaml  gripper_robot.yaml  hand_robot.yaml
configs/scenario/: move_cube_to_target_scenario.yaml  move_to_target_scenario.yaml
configs/scenario/grasping/: cube.yaml  custom.yaml  sphere.yaml  star.yaml
evodex/: main.py
evodex/evolution/: core.py  robot.py  tree.py  types.py  utils.py
evodex/simulation/: __init__.py  config.py  controller.py  env.py  renderer.py  robot.py  scale.py  scenario.py  simulation.py  types.py  utils.py  wrapper.py
evodex/simulation/3d/robot/: config.py  utils.py
evodex/simulation/isaac/robot/: config.py  evolvable.py  utils.py
evodex/simulation/isaac/robot/templates/: robot.urdf.j2
evodex/simulation/isaac/tasks/: __init__.py
evodex/simulation/isaac/tasks/grasping/: config.py  env.py
evodex/simulation/isaac/tasks/grasping/mdp/: reward.py
evodex/simulation/robot/: __init__.py  base.py  collision.py  config.py  connection.py  constants.py  evolvable.py  finger.py  robot.py  segment.py  spaces.py  utils.py
evodex/simulation/scenario/: __init__.py  config.py  core.py  move_cube_to_target.py  move_to_target.py  object.py  reward.py  scenario_move_cube.py  types.py  utils.py
evodex/templates/: robot.urdf.j2
experiments/: utils.py
experiments/evolution/: crossover.py  mutation.py
experiments/move_to_target/: eval.py  train.py
experiments/ppo_single_agent/: eval.py  train.py
experiments/robot/: urdf_generator.py
experiments/simulation/: cube.py  default_action.py  keyboard_control.py  observation.py  wrapped_env.py
tests/: utils.py
tests/configs/: test_scenario.yaml
tests/evolution/: test_tree.py
tests/simulation/: test_config.py  test_scenario_registry.py  test_spaces.py  test_utils.py
