[project]
name = "evodex"
version = "0.1.0"
description = "Evolutaionary algorithm for robotic hand co-design"
authors = [
    {name = "Andrei Matei",email = "a.matei2206@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymunk (>=6.11.1,<7.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "gymnasium (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

