[project]
name = "evodex"
version = "0.1.0"
description = "Evolutaionary algorithm for robotic hand co-design"
authors = [
    {name = "Andrei Matei",email = "a.matei2206@gmail.com"}
]
readme = "README.md"
packages = [{include = "evodex"}]
requires-python = ">=3.12"
dependencies = [
    "pymunk (>=6.11.1,<7.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "gymnasium (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "types-pyyaml (>=6.0.12.20250516,<7.0.0.0)",
    "stable-baselines3[extra] (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

