[tool.poetry]
name = "evodex"
version = "0.1.0"
description = "Evolutionary algorithm for robotic hand co-design"
authors = ["Andrei Matei <a.matei2206@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pymunk = ">=7.1.0,<8.0.0"
pygame = ">=2.6.1,<3.0.0"
gymnasium = ">=1.2.0,<2.0.0"
pydantic = ">=2.11.7,<3.0.0"
pytest = ">=8.4.1,<9.0.0"
types-pyyaml = ">=6.0.12.20250822,<7.0.0.0"
jinja2 = ">=3.1.6,<4.0.0"
stable-baselines3 = { extras = ["extra"], version = ">=2.7.0,<3.0.0" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"