[metadata]
name = evodex
version = 0.1.0
description = Evodex robot package with 4-finger gripper
author = Your Name
author_email = your.email@example.com
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = ==3.11.*

[options]
packages = find:
zip_safe = false
